playingb with colors

--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -4,8 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Styles.css">
+        <title>Rosita Uqueio Video Editing Portfolio</title>
     </head>
     <body>
-
+        <header>
+            <div class="navbar">
+                <nav>
+                    <h2 id="logo">RJ UQUEIO</h2>
+                    <ul>
+                        <li><a href="#"></a>About</li>
+                        <li><a href="#"></a>Projects</li>
+                        <li><a href="#"></a>Contact</li>
+                    </ul>
+                </nav>
+            </div>    
+        </header>
+        <main>
+            <div></div>
+            <div class="#projects"></div>
+        </main>
+        <footer></footer>
     </body>
 </html>
