--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -10,7 +10,7 @@
         <header>
             <div class="navbar">
                 <nav>
-                    <h2 id="logo">RJ UQUEIO</h2>
+                    <h2 id="logo"><span>RJ</span> UQUEIO</h2>
                     <ul>
                         <li><a href="#"></a>About</li>
                         <li><a href="#"></a>Projects</li>
