--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -12,17 +12,30 @@
                 <nav>
                     <h2 id="logo"><span>RJ</span> UQUEIO</h2>
                     <ul>
-                        <li><a href="#"></a>About</li>
-                        <li><a href="#"></a>Projects</li>
-                        <li><a href="#"></a>Contact</li>
+                        <li><a href="#About"></a>About</li>
+                        <li><a href="#Projects"></a>Projects</li>
+                        <li><a href="#Contact"></a>Contact</li>
                     </ul>
                 </nav>
             </div>    
         </header>
         <main>
-            <div></div>
-            <div class="#projects"></div>
+            <div id="About">
+                <h3>Hi, My Name Is</h3>
+                <h1>Rosita Jose Uqueio</h1>
+                <h3>I am a Web Developer & a Video Editor</h3>
+                <video id="background-video" autoplay loop muted >
+                    <source src="videos/background.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div id="Projects">
+                
+            </div>
         </main>
-        <footer></footer>
+        <footer id="Contact">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
+        </footer>
     </body>
 </html>
