--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -20,15 +20,16 @@
             </div>    
         </header>
         <main>  
-            <div id="About" class="container">
-                <video width="620" height="440" controls  autoplay loop>
+            <div id="About" class="content1" >
+                <h1>Introduction Video</h1>
+                <video id="video" width="620" height="320" controls  autoplay loop>
                     <source src="./videos/introvid.mp4" type="video/mp4">
                   </video>
             </div>
 
-            <div class="Projects">
-               <h1>Here are some videos i've worked on</h1> 
-            </div>
+            <div id="Projects"class="container">
+               <h1>Here are some videos I worked on</h1> 
+            </section>
         </main>
         <footer id="Contact">
             <a href="#" class="fa fa-facebook"></a>
