--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -28,8 +28,15 @@
             </div>
 
             <div id="Projects"class="container">
-               <h1>Here are some videos I worked on</h1> 
-            </section>
+               <h1>Here is some of my work</h1>
+                <div class="row">
+                    <div class="col">
+                        <div class="feature-img">
+                            <img src="./Pictures/museum.jpg" width="100%">
+                        </div> 
+                    </div>
+                </div>
+            </div>
         </main>
         <footer id="Contact">
             <a href="#" class="fa fa-facebook"></a>
