--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -35,6 +35,14 @@
                             <img src="./Pictures/museum.jpg" width="100%">
                         </div> 
                     </div>
+                    <div class="col">
+                        <div class="small-img-row">
+                            <div class="small-img">
+                                <img src="./Pictures/fashion2.jpg">
+                            </div>
+                            <p>Vlick on Image to play videos</p>
+                        </div>
+                    </div>         
                 </div>
             </div>
         </main>
