--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -19,6 +19,7 @@
                 </nav>
             </div>    
         </header>
+
         <main>  
             <div id="About" class="content1" >
                 <h1>Introduction Video</h1>
@@ -33,18 +34,44 @@
                     <div class="col">
                         <div class="feature-img">
                             <img src="./Pictures/museum.jpg" width="100%">
+                            <img src="./Pictures/play.png" class="play-btn">
                         </div> 
                     </div>
+
                     <div class="col">
                         <div class="small-img-row">
                             <div class="small-img">
                                 <img src="./Pictures/fashion2.jpg">
+                                <img src="./Pictures/play.png" class="play-btn">
                             </div>
-                            <p>Vlick on Image to play videos</p>
+                            <p> Cick on Image to play videos</p>
+                        </div>
+
+                        <div class="small-img-row">
+                            <div class="small-img">
+                                <img src="./Pictures/ling.png">
+                                <img src="./Pictures/play.png" class="play-btn">
+                            </div>
+                            <p> Cick on Image to play videos</p>
+                        </div>
+
+                        <div class="small-img-row">
+                            <div class="small-img">
+                                <img src="./Pictures/fashion2.jpg">
+                                <img src="./Pictures/play.png" class="play-btn">
+                            </div>
+                            <p> Cick on Image to play videos</p>
                         </div>
                     </div>         
                 </div>
             </div>
+
+            <div class="video-player">
+                <video width="100%" controls autoplay>
+                    <source src="./Videos/museum1.mp4" type="video/mp4">
+                </video>
+            </div>
+
         </main>
         <footer id="Contact">
             <a href="#" class="fa fa-facebook"></a>
