--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -67,8 +67,8 @@
             </div>
 
             <div class="video-player">
-                <video width="100%" controls autoplay>
-                    <source src="./Videos/museum1.mp4" type="video/mp4">
+                <video width="100%" controls autoplay loop>
+                    <source src="https://vm.tiktok.com/ZMYmjSvn/" type="video/mp4">
                 </video>
             </div>
 
