--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -7,17 +7,19 @@
         <title>Rosita Uqueio Video Editing Portfolio</title>
     </head>
     <body>
+
         <header>
             <div class="navbar">
                 <nav>
                     <h2 id="logo"><span>RJ</span> UQUEIO</h2>
                     <ul>
-                        <li><a href="#About"></a>About</li>
-                        <li><a href="#Projects"></a>Projects</li>
-                        <li><a href="#Contact"></a>Contact</li>
+                        <li><a href="#About">About</a></li>
+                        <li><a href="#Projects">Projects</a></li>
+                        <li><a href="#Contact">Contact</a></li>
                     </ul>
                 </nav>
-            </div>    
+            </div>  
+
         </header>
 
         <main>  
