--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -68,11 +68,11 @@
                 </div>
             </div>
 
-            <div class="video-player" id=""videoPlayer"">
+            <div class="video-player" id="videoPlayer">
                 <video width="100%" controls autoplay id="myVideo">
                     <source src="./Videos/museum1.mp4" type="video/mp4">
                 </video>
-                <img src="./Pictures/close.png" class="close-btn" onclick="closeVideo">
+                <img src="./Pictures/close.png" class="close-btn" onclick="stopVideo">
             </div>
 
             <script>
