--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -60,7 +60,7 @@
                         <div class="small-img-row">
                             <div class="small-img">
                                 <img src="./Pictures/fashion2.jpg">
-                                <img src="./Pictures/play.png" class="play-btn">
+                                <img src="./Pictures/play.png" class="play-btn" onclick="playVideo('./Videos/lnge.mp4')">
                             </div>
                             <p> Cick on Image to play videos</p>
                         </div>
