--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Rosita Uqueio Video Editing Portfolio</title>
     </head>
     <body>
@@ -35,7 +36,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="feature-img">
-                            <img src="./Pictures/museum.jpg" width="100%">
+                            <img src="./Pictures/museum.jpg" width="100%" >
                             <img src="./Pictures/play.png" class="play-btn" onclick="playVideo('./Videos/museum1.mp4')">
                         </div> 
                     </div>
@@ -72,7 +73,7 @@
                 <video width="100%" controls autoplay id="myVideo">
                     <source src="./Videos/museum1.mp4" type="video/mp4">
                 </video>
-                <img src="./Pictures/close.png" class="close-btn" onclick="stopVideo">
+                <img src="./Pictures/close.png" class="close-btn" onclick="s">
             </div>
 
             <script>
@@ -90,9 +91,10 @@
             </script>
         </main>
         <footer id="Contact">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-instagram"></a>
+            <h1>I am available on social media</h1>
+            <a href="https://github.com/RositaJUqueio" target="_blank" class="fa fa-github"></a>
+            <a href="https://twitter.com/LikeAnEagle25?s=09" target="_blank" class="fa fa-twitter"></a>
+            <a href="https://www.angularjswiki.com/fontawesome/fa-tiktok/" target="_blank" class="fa fa-tictoc">tictock</a>
         </footer>
     </body>
 </html>
