--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -60,8 +60,8 @@
 
                         <div class="small-img-row">
                             <div class="small-img">
-                                <img src="./Pictures/fashion2.jpg">
-                                <img src="./Pictures/friends.jpg" class="play-btn" onclick="playVideo('./Videos/Friends.mp4')">
+                                <img src="./Pictures/friends.jpg">
+                                <img src="./Pictures/play.png" class="play-btn" onclick="playVideo('./Videos/Friends.mp4')">
                             </div>
                             <p> Food & Drinks With Friends</p>
                         </div>
