--- a/Portfolio/RJ_Uqueio.html
+++ b/Portfolio/RJ_Uqueio.html
@@ -50,7 +50,7 @@
                             <p>Advert For a Store Named Famanda</p>
                         </div>
 
-                        <div class="small-img-row">
+                        <div class="small-img-row" id="lng">
                             <div class="small-img">
                                 <img src="./Pictures/ling.png">
                                 <img src="./Pictures/play.png" class="play-btn" onclick="playVideo('./Videos/lnge.mp4')">
