adding images to portfolio

--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -19,7 +19,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    ,<img src="" alt="">
+                    <img src="./images/out-0.png" alt="profile picture">
                 </div>
             </div>
             <div class="right-header">
