edited the header section

--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -24,8 +24,18 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, my name is <span>Rosita Jose Uqueio</span> 
+                    Hi, my name is <span>Rosita Jose Uqueio</span>
+                    
                 </h1>
+                <p>
+                    I am a web developer and a software engineering student. I love to create functional websites.
+                    I write blogs and technical documents.
+                </p>
+                <a href="" class="main-btn">
+                    <span class="btn-text">Download Resume</span>
+                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                </a>
+              
             </div>
         </div>
     </header> 
