--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -19,8 +19,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="./images/an
-                     imated-removebg.png" alt="profile picture">
+                    <img src="./images/animated-removebg.png" alt="profile picture">
                 </div>
             </div>
             <div class="right-header">
