--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -31,11 +31,12 @@
                     I am a web developer and a software engineering student. I love to create functional websites.
                     I write blogs and technical documents.
                 </p>
-                <a href="" class="main-btn">
-                    <span class="btn-text">Download Resume</span>
-                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                </a>
-              
+                <div class="btn-con">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download Resume</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>    
+                </div>
             </div>
         </div>
     </header> 
