Starting Over with the aboutr section

--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -45,42 +45,16 @@
     <main>
         <!--About Section-->
         <section class="section sec2 about" id="about">
-            <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
-            </div>
-            <div class="about-container">
-                <!--spliting container into two parts-->
-                <div class="left-about">
-                    <h4>Information About Me</h4>
-                    <p>
-                        My love for learning and passion for personal growth is a driving force in my life. My inquisitive nature makes me an ideal team player who thrives on healthy competition. It also enables me to approach challenges with a cognitive toolkit that allows me to handle problems effectively and creatively.
-                        I am currently enrolled in a rigorous software engineering scholarship program at ALX. Through this program, I am acquiring the technical capabilities and sought-after skills needed for Web development.
-                        My determination to improve and willingness to step out of my comfort zone drive me to constantly enhance my skill set and tackle new challenges. 
-                        With my track record of working and learning in a diverse environment, I have honed my work ethic and become a multi-faceted, efficient, and reliable professional.
-                        I am confident that with my grit and passion for growth, I will make valuable contributions to Technology.
-                    </p>
-                    <div class="btn-about">
-                        <a href="" class="main-btn">
-                            <span class="btn-text">Download Resume</span>
-                            <span class="btn-icon"><i class="fas fa-download"></i></span>
-                        </a>    
-                    </div>
-                </div>
-                <!--Right Section-->
-                <div class="right-about">
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">60+</p>
-                            <p class="large-text">Project<br/>Completed</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </section>
-
+        
         <!--Portfolio section-->
         <section class="section sec3 portfolio" id="portfolio"></section>
+
+        <!--Blog Section-->
         <section class="section sec4 blogs" id="blogs"></section>
+
+        <!--Contact Section-->
         <section class="section sec5 contact" id="contact"></section>
     </main>
 
