--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -45,7 +45,9 @@
     <main>
         <!--About Section-->
         <section class="section sec2 about" id="about">
-            
+            <div class="main-title">
+                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+            </div>
         </section>
         
         <!--Portfolio section-->
