--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -68,13 +68,19 @@
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
                     </div>
-
                 </div>
+
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">90+</p>
                             <p class="small-text">Projects <br/> completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">10+</p>
+                            <p class="small-text">Years of <br /> experience</p>
                         </div>
                     </div>
                 </div>
