--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -48,7 +48,32 @@
             <div class="main-title">
                 <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
             </div>
-           
+            <div class="about-container">
+                <!--spliting the parent container into two-->
+                <div class="left-about">
+                    <h4>More about me</h4>
+                    <p>eerty wegjghffgbhefsjd fdjhfdjklflklk;lfd  uihjk
+                        dfghj ikxdghdjskkfl jhdskfklkdg hgs khdsfjkl giuauklfd
+                        tfbhdk.
+                        fhskldjkv bvasvdhjjlklyur kjhfjiocbjsdhfuis .
+                    </p>
+                    <div class="btn-con">
+                        <a href="" class="main-btn">
+                            <span class="btn-text">Download Resume</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        </a>    
+                    </div>
+                </div>
+                <!--right section-->
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">60+</p>
+                            <p class="small-text">Projects <br \> Completed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         
         <!--Portfolio section-->
