--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -72,6 +72,24 @@
                             <p class="small-text">Projects <br \> Completed</p>
                         </div>
                     </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">60+</p>
+                            <p class="small-text">Projects <br \> Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">60+</p>
+                            <p class="small-text">Projects <br \> Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">60+</p>
+                            <p class="small-text">Projects <br \> Completed</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
