--- a/Portfolio_p2/index.html
+++ b/Portfolio_p2/index.html
@@ -52,10 +52,14 @@
                 <!--spliting the parent container into two-->
                 <div class="left-about">
                     <h4>More about me</h4>
-                    <p>eerty wegjghffgbhefsjd fdjhfdjklflklk;lfd  uihjk
-                        dfghj ikxdghdjskkfl jhdskfklkdg hgs khdsfjkl giuauklfd
-                        tfbhdk.
-                        fhskldjkv bvasvdhjjlklyur kjhfjiocbjsdhfuis .
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
+                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
+                        delectus dolore fugiat exercitationem a, 
+                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Harum non necessitatibus deleniti eum soluta.
                     </p>
                     <div class="btn-con">
                         <a href="" class="main-btn">
